# twozone_housemodel

./: Example_gitignore.txt  NEN5060.py  Outputfile_Calc.csv  README.rst  Read about .gitignore.txt  Readme.txt  Setpoint_profile.py  Setpoint_profileV1.py  Simulation.py  Simulation2R2C.py  Simulation2R2C_buffervessel.py  Simulation2R2C_buffervessel_LMTD.py  Simulation2R2C_buffervessel_LMTD_newyaml.py  Simulation2R2C_buffervessel_matrix.py  Simulation2R2C_buffervessel_newyaml.py  Simulation2R2C_buffervessel_with_radiator.py  Simulation2R2C_matrix.py  Simulation2R2C_newboiler.py  Simulation2R2C_newyaml.py  Simulation2R2C_radiator.py  Simulation2R2C_radiator_matrix.py  Simulation2R2C_radiator_matrix_for_loop.py  Simulation2R2C_radiator_matrix_for_loop_discrete_controller.py  Simulation7R4C_2_zones.py  Simulation_WHATAS.py  Simulation_WHATAS.yaml  Simulation_WHATAS_office.py  Simulation_WHATAS_office.yaml  Simulation_WHATAS_scenario2.py  Simulation_for_companies.py  Simulation_for_companies_nodes_edges.py  Simulation_for_companies_nodes_edges_single_file.py  Simulation_heat_pump_NTA8800.py  Simulation_heat_pump_NTA8800_nodes_edges.py  Simulation_heat_pump_NTA8800_part_load.py  Simulation_heat_pump_NTA8800_with_buffervessel.py  Simulation_heat_pump_NTA8800_with_buffervessel.yaml  Simulation_heat_pump_NTA8800_with_buffervessel_nodes_edges.py  Simulation_with_HeatingSystemClass.py  Temperature_SP.py  (+51 more)
Book_Rouchier/: RC_model.py
Documentation/: Rendement HR-ketel.xlsx  Toelichting variabelen Enervalis in Data analysis_PvK_MJ.docx  done.txt
Frost_Model/: HAN_frost_model.py
House models References/: 2R2Cmodel.aux  2R2Cmodel.tex  2_Zones_house_circuits.drawio  7R4Cmodel.aux  7R4Cmodel.tex  House_electrical_circuits overview.drawio  House_model_references.aux  House_model_references.bbl  House_model_references.blg  House_model_references.out  House_model_references.tex  House_model_references.toc  NEN_ISO.aux  NEN_ISO.tex  commands.tex  introduction.aux  introduction.tex  mybibliography.bib  preamble.tex
ML_heat_demand/: LSTM_model_struct.py  Prediction.py  load_and_preprocess_training.py  test_example.py  train_model.py
NEN_data/: NEN5060-2018+A1-2021.xlsx  NEN5060-2018.xlsx  Notes on NEN 5060-2018.docx  weeknummers2020.xlsx  ~$tes on NEN 5060-2018.docx  ~$weeknummers2020.xlsx
PIDlib/: SimplePIDDemo.py
housemodel/: simulation.py
new_yaml_xl/: Simulation2R2C_buffervessel_newyaml.py  Simulation2R2C_matrix.py  Tussenwoning16april.xlsm  Tussenwoning16april.yaml  boilers.py  house_buffervessel_newyaml.py  new_configurator.py
obsolete/: Simulation2R2C_buffervessel.py  Simulation2R2C_buffervessel_LMTD.py  Simulation2R2C_buffervessel_LMTD_newyaml.py  Simulation2R2C_buffervessel_matrix.py  Simulation2R2C_buffervessel_newyaml.py  Simulation2R2C_buffervessel_with_radiator.py  Simulation2R2C_matrix.py  Simulation2R2C_newboiler.py  Simulation2R2C_newyaml.py  Simulation2R2C_radiator_matrix.py  Simulation2R2C_radiator_matrix_for_loop.py  Tussenwoning14april.xlsm  Tussenwoning16april.yaml  Tussenwoning_alt.yaml  Tussenwoning_rob.yaml  buffer_vessel_no_oop.py  config2R2C.ini  config2R2C.yml  config2R2Ctrans.yml  (+11 more)
(+321 files in other folders)
