[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["housemodel"]

[project]
name = "housemodel"
version = "0.0.3"
authors = [
  { name="Paul J.M. van Kan", email="paul.vankan@han.nl" },
]
description = "HAN Open Source House Model"
readme = "README.rst"

requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hancse/twozone_housemodel"


