# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[metadata]
name = han-housemodel
version = 0.1.0
author = HAN-AEA-BES
author_email = info@realpython.com
description = HAN lumped element house model with appliances and control
long_description = file: README
long_description_content_type = text/markdown
url = https://github.com/hancse/han-housemodel
license = MIT
classifiers= 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
    packages = find:
	python_requires = >=3.6

[options.packages.find]
where = src
 

# https://www.freecodecamp.org/news/how-to-create-and-upload-your-first-python-package-to-pypi/
